--- a/src/CursoOnline.Web/appsettings.json
+++ b/src/CursoOnline.Web/appsettings.json
@@ -1,8 +1,12 @@
 ﻿{
   "Logging": {
-    "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=CursoOnLine;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
