--- a/src/CursoOnline.Web/CursoOnline.Web.csproj
+++ b/src/CursoOnline.Web/CursoOnline.Web.csproj
@@ -8,6 +8,10 @@
 
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.CodeAnalysis" Version="4.14.0" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.9">
+	    <PrivateAssets>all</PrivateAssets>
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
 	</ItemGroup>
 
 	<ItemGroup>
